# Projet-programmation-C

./: README.md
Chaima/: fonctionBV.c  fonctionBV.h  main.c
Mohamed/CRUD/: function.c  function.h  main.c  makefile  prog  utilisateur.txt
Mohamed/Interface back/InterfaceLogin/: interfacelogin.glade.bak.bak  interfacelogin.glade.bakp.bak
Mohamed/InterfaceLogin/: Makefile.am  configure.in  interfacelogin.glade  interfacelogin.glade.bak
Mohamed/InterfaceLogin/src/: Makefile.am  interface.c  interface.h.bak
Nassim/: function.c  function.h
Nassim/CRUD/: function.c  function.h  function.h.gch  liste.txt  main.c  makefile  printTab.txt  prog  user.txt
Nassim/Gestion_liste_electorale/: gestion_liste_electorale.glade  gestion_liste_electorale.gladep
Nassim/Nouvelle_Interface/exe/: Makefile  config.status  configure  configure.in  exe.glade
Nassim/exe/: Makefile  Makefile.in  config.h  config.status  exe.glade  exe.glade.bak  exe.gladep.bak
Nassim/exe/autom4te.cache/: requests  traces.0  traces.1
Nassim/exe/src/: Makefile  Makefile.am  (+23 more)
Nassim/exedemifinal/exe/src/: Makefile  Makefile.am  Makefile.in  agent.txt  bv.c  bv.h  callbacks.c  callbacks.h  connected.txt  delegation.txt  election.c  election.h  election.txt  exe  function.c  function.h  interface.c  interface.c.bak  interface.h  interface.h.bak  liste.txt  login.c  login.h  main.c  utilisateur.txt  vote.txt
Nassim/exedemifinal/exe/src/.deps/: callbacks.Po  function.Po  functionPrint.Po  function_Stat_Nassim.Po  login.Po
Seif/gestionElection/: fileelection.txt  fonction.c  fonction.h  main.c  prog
(+31 files in other folders)
